--- a/go/.goreleaser.yml
+++ b/go/.goreleaser.yml
@@ -6,7 +6,7 @@ brew:
   # Reporitory to push the tap to.
   github:
     owner: xuqingfeng
-    name: tool-kit-tap
+    name: homebrew-tap
 
   # Allows you to set a custom download strategy.
   # Default is empty.
@@ -58,12 +58,11 @@ brew:
 
   # So you can `brew test` your formula.
   # Default is empty.
-  # test: |
-  #   system "#{bin}/program --version"
-  #   ...
+  test: |
+    system "#{bin}/wcl -v"
+
 
   # Custom install script for brew.
   # Default is 'bin.install "program"'.
-  # install: |
-  #   bin.install "program"
-  #   ...
+  install: |
+    bin.install "wcl"
