--- a/go/.goreleaser.yml
+++ b/go/.goreleaser.yml
@@ -1,7 +1,7 @@
 brew:
   # Name of the recipe
   # Default to project name
-  name: tool-kit
+  name: wcl
 
   # Reporitory to push the tap to.
   github:
