--- a/go/.goreleaser.yml
+++ b/go/.goreleaser.yml
@@ -27,7 +27,7 @@ brew:
   # Reporitory to push the tap to.
   github:
     owner: xuqingfeng
-    name: homebrew-tap
+    name: tool-kit
 
   # Allows you to set a custom download strategy.
   # Default is empty.
