Link version when build

--- a/go/Makefile
+++ b/go/Makefile
@@ -1,3 +1,5 @@
+VERSION=`git describe --abbrev=0 --tags`
+
 test:
 	go vet ./... && go test -v $$(go list ./... | grep -v /vendor/)
 
@@ -5,4 +7,4 @@ fmt:
 	go fmt ./...
 
 build: fmt
-	go build -o out/wcl cmd/wcl/main.go
+	go build -ldflags "-w -s -X main.version=${VERSION}" -o out/wcl cmd/wcl/main.go
